# cyt-ng-handheld

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  partitions.csv  sdkconfig.defaults
docs/: TODO.md  dataviz-display-spec.md  hardware.md  phone-app-requirements.md  ui-spec.md  ux-interaction-spec.md
docs/reviews/: social-psych-health-review.md  specialist-gap.md
main/: CMakeLists.txt  cyt_config.h  main.c
main/companion/: ble_companion.c  ble_companion.h
main/gps/: gps_parser.c  gps_parser.h
main/health/: cycle_tracker.c  cycle_tracker.h  mood_tracker.c  mood_tracker.h  pedometer.c  pedometer.h  sobriety_counter.c  sobriety_counter.h
main/scanners/: ble_scanner.c  ble_scanner.h  cc1101_scanner.c  cc1101_scanner.h  remote_id.c  remote_id.h  wifi_scanner.c  wifi_scanner.h
main/storage/: device_table.c  device_table.h  familiar_devices.c  familiar_devices.h  sd_logger.c  sd_logger.h
main/ui/: display.c  display.h
